fix popup overflow hidden

--- a/src/app/components/current-weather-card/current-wather-card.module.css
+++ b/src/app/components/current-weather-card/current-wather-card.module.css
@@ -6,7 +6,6 @@
   border-radius: 5px;
   padding: 10px 0;
   margin: 10px;
-  overflow-x: hidden;
   max-width: 500px;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 7px;
 }
